# AskDOST_DemoDay

./: RAG_evaluation.ipynb  app.py  askdost_hybridRAG.ipynb  dost_hybridRAG.py  pyproject.toml
Cafe Dumaguete Analysis/: Cafe_Dumaguete_Linear_Regression_Model.ipynb
data/: dost_testset.csv
